# coco

./: Life.hs  Life2.hs  Life3.hs  generate-example.hs  life.cabal
