cabal-version:      2.4
name:               life
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             pingshiyu
maintainer:         pingshiyu@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable life
    main-is: Life.hs
    build-depends: 
        base,
        comonad
    hs-source-dirs: .