cabal-version:      2.4
name:               life
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             pingshiyu
maintainer:         pingshiyu@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

common polysemy-dependencies
    default-language: Haskell2010
    build-depends:    
        base >= 4.15,
        polysemy,
        polysemy-conc,
        polysemy-plugin,
    default-extensions:
        DataKinds,
        FlexibleContexts,
        GADTs,
        LambdaCase,
        PolyKinds,
        RankNTypes,
        ScopedTypeVariables,
        TypeApplications,
        TypeOperators,
        TypeFamilies
    ghc-options: -fplugin=Polysemy.Plugin

executable life
    main-is: Life.hs
    build-depends: 
        base,
        comonad
    hs-source-dirs: .

executable life2
    main-is: Life2.hs
    build-depends: 
        base,
        comonad
    hs-source-dirs: .

executable life3
    main-is: Life3.hs
    build-depends: 
        base,
        comonad,
        adjunctions,
        containers
    hs-source-dirs: .

executable gen
    main-is: generate.hs
    build-depends: 
        base,
        comonad,
        adjunctions,
        containers,
        random,
        MonadRandom
    hs-source-dirs: .

executable gen-example
    import: polysemy-dependencies
    main-is: generate-example.hs
    build-depends: 
        base,
        comonad,
        adjunctions,
        containers,
        random,
        MonadRandom,
        singletons,
        singletons-th,
        singletons-base
    hs-source-dirs: .

executable gen-ps
    import: polysemy-dependencies
    main-is: generate-ps.hs
    build-depends: 
        base,
        comonad,
        adjunctions,
        containers,
        random,
        MonadRandom,
        singletons,
        singletons-th,
        singletons-base
    hs-source-dirs: .